olympus/mission-control/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mission-control
  namespace: olympus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mission-control.ramoneees.com`)
      kind: Rule
      services:
        - name: mission-control
          port: 80
  tls:
    secretName: wildcard-ramoneees-com-tls
